force-app/main/default/objects/Work_Order_Appointment_History__c/Work_Order_Appointment_History__c.object-meta.xml
<CustomObject>
    <label>Work Order Appointment History</label>
    <nameField>
        <displayFormat>WOAH-{000000000}</displayFormat>
        <label>Work Order Appointment History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work Order Appointment History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>