force-app/main/default/objects/Work_Order_Appointment_History__c/fields/Prior_Tech__c.field-meta.xml
<CustomField>
    <fullName>Prior_Tech__c</fullName>
    <formula>Service_Appointment_History__r.Prior_Tech__c</formula>
    <label>Prior Tech</label>
    <type>Text</type>
</CustomField>