force-app/main/default/objects/Work_Order_Appointment_History__c/fields/Service_Appointment_History__c.field-meta.xml
<CustomField>
    <fullName>Service_Appointment_History__c</fullName>
    <label>Service Appointment History</label>
    <referenceTo>Service_Appointment_History__c</referenceTo>
    <relationshipLabel>Work Order Appointment History</relationshipLabel>
    <relationshipName>Work_Order_Appointment_History</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>