force-app/main/default/objects/Work_Order_Appointment_History__c/fields/Service_Date__c.field-meta.xml
<CustomField>
    <fullName>Service_Date__c</fullName>
    <formula>Service_Appointment_History__r.Service_Date__c</formula>
    <label>Service Date</label>
    <type>Date</type>
</CustomField>