force-app/main/default/objects/Work_Order_Appointment_History__c/fields/Service_Description__c.field-meta.xml
<CustomField>
    <fullName>Service_Description__c</fullName>
    <label>Service Description</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>