force-app/main/default/objects/Work_Order_Appointment_History__c/fields/Service_Job_ID__c.field-meta.xml
<CustomField>
    <fullName>Service_Job_ID__c</fullName>
    <formula>Service_Appointment_History__r.Service_Job_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Job ID</label>
    <type>Text</type>
</CustomField>