force-app/main/default/objects/Work_Order_Appointment_History__c/fields/Work_Type__c.field-meta.xml
<CustomField>
    <fullName>Work_Type__c</fullName>
    <formula>Service_Appointment_History__r.Work_Type__c</formula>
    <label>Work Type</label>
    <type>Text</type>
</CustomField>